Fix Mockito mock handler AssertionError and JDK 25 JVM crash
   Root cause: Mockito 5.21.0 MockUtil.getMockHandlerOrNull() has an internal
   assertion that fails when multiple MockMaker instances coexist. The alias
   "mock-maker-subclass" now resolves to ByteBuddyMockMaker (not
   SubclassByteBuddyMockMaker), so specifying MockMakers.SUBCLASS created a
   second mock maker entry, triggering AssertionError on handler lookup.

   Separately, mocking ClassLoader types caused a JDK 25 JVM crash
   (moduleEntry.cpp guarantee failure) because the generated mock subclass
   IS a ClassLoader whose unnamed module is null.

   Fixes:
   - Remove explicit MockMakers.SUBCLASS from mock settings — rely on the
     SPI file which correctly configures SubclassByteBuddyMockMaker as sole
     default, keeping only one mock maker in the map
   - Remove fallback-to-SUBCLASS retry paths that created dual-maker state
   - Add -da:<shaded-package>... to client JVM args (defense-in-depth)
   - Add -Dnet.bytebuddy.experimental=true to all client JVM launches
     (was only in Maven test config, needed for JDK 25+ compatibility)
   - Remove clearInlineMocks() (no-op for SubclassByteBuddyMockMaker)
   - Reject ClassLoader types from functional mocking (same pattern as
     existing Reader/InputStream exclusions; prevents JDK 25 JVM crash)
   - Add debug-level diagnostic logging of registered mock makers